fix overflow problem mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,6 @@ body {
     color: #000000;
     font-size: 1em;
     line-height: 1.6em;
-    overflow-x: hidden;
 }
 
 h1 a {
@@ -109,6 +108,7 @@ header {
 }
 
 .vertical-center {
+    width: 100vw;
     padding: 0px !important;
 }
 
@@ -137,7 +137,7 @@ section {
     background-color: rgba(255, 255, 255, 0.7);
     padding: 2%;
     display: grid;
-    width: 100%;
+    max-width: 100vw;
     justify-content: center;
     padding-bottom: 50px;
     margin-bottom: 50px;
@@ -754,13 +754,8 @@ div.container-logout {
 
 /*tablet setting*/
 @media screen and (min-width: 800px) and (max-width: 1199px) {
-    body {
-        overflow-x: visible;
-    }
-
     .vertical-center {
         margin: 0 auto;
-        max-width: 1200px;
         padding: 0px !important;
     }
 
@@ -821,7 +816,7 @@ div.container-logout {
     }
 
     .wrapper-navigation-fullwitdh {
-        width: 100%;
+        width: 100vw;
         background-color: #FFFFFF;
         min-height: 80px;
     }
@@ -1007,10 +1002,6 @@ div.container-logout {
 }
 
 @media screen and (min-width: 1200px) {
-    body {
-        overflow-x: visible;
-    }
-
     p {
         padding-left: 0px;
         padding-right: 0px;
